methods.picture.PictureMono1.scala.error
Erreur de compilation :
PictureMono1:6: error: not found: value avancer
  avancer(2)
  ^