methods.picture.PictureMono1.scala.code
override def run() {
  faireV()
}

def faireV() {
  avancer(2)
  marquerSol()
  avance()
  gauche()
  avance()
  marquerSol()
  recule()
  droite()
  avance()
  marquerSol()
  avance(2)
  gauche()
}

def marquerSol() {
  baisseBrosse()
  leveBrosse()
}